--- a/etablissement/pProjet212.html
+++ b/etablissement/pProjet212.html
@@ -58,30 +58,31 @@
 	<div id="zLeftTexteProject">
 	<div class="right">
 	  </div>
-	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+	<div id="TexteProject_test">
+Dans un quartier en recherche de dynamisme, l’ancienne halle n’attendait que de retrouver sa prestance emblématique. Les installations au RDC des grands espaces de l’école de dance et à l’étage dans les assemblages de charpente, des espaces intimistes de l’école de musique, viennent parfaitement remplir cette mission. Contemporaine et dynamique, l’extension en verre vient préciser l’entrée, signifier l’ouverture et l’accueil du nouvel équipement. Démolition de l’appendis XXe s, et restitution des grandes baies au format d’origine.
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p212/p212Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> ECOLE MUSIQUE et DANCE – 72110 BONNETABLE</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
-			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Année : 2017 <br>
+			Coût global de l’opération: bâtiment 1 300 000€ HT
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +91,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +100,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +109,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +118,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +127,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p212/p212Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -154,8 +155,8 @@
   
 	  	
 	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
+	  	    <a   href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  href="pProjet22.html" class="list_two"> • Pôle enfance à Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
 		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
 		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
@@ -165,7 +166,7 @@
 		  <a href="pProjet29.html" class="list_two">• Crêche à Ecouché (61)</a><br>
 		  <a href="pProjet210.html" class="list_two">• CAS Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet211.html" class="list_two">• SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
-		  <a href="pProjet212.html" class="list_two">• Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
+		  <a href="pProjet212.html" class="list_two"><span class="actived">• Aménagement des halles de Bonnetable en école de danse et de musique (72)</span></a><br>
 		  <a href="pProjet213.html" class="list_two">• Construction d'un restaurant scolaire - La Ferté Fresnel (61)</a><br>
 		  <a href="pProjet214.html" class="list_two">• Restructuration de la MFR - Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet215.html" class="list_two">• Restructuration et rénovation de la salle des anciens - St Cosmes en Vairais (72)</a><br>
