--- a/etablissement/pProjet22.html
+++ b/etablissement/pProjet22.html
@@ -58,30 +58,32 @@
 	<div id="zLeftTexteProject">
 	<div class="right">
 	  </div>
-	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+	<div id="TexteProject_test">
+		Le terrain d’implantation du pôle enfance, à fortes pentes différenciées entre deux voies convergentes a imposé une construction étagée dont chaque espace de vie trouve une correspondance extérieure. 
+Le pôle enfance comporte 5 zones, une zone petite enfance avec 3 salles d’activités pour les différents âges avec les locaux de siestes pour un total de 48 lits répartis en 6 chambres et tous locaux changes et rangements connexes. Une zone centre de loisirs / RAM avec ses espaces, 2 salles polyvalente d’activités. La zone des espaces communs, hall d’accueil, restaurants et son office de réchauffage. La zone administrative et locaux du personnel. La dernière zone étant les locaux techniques : buanderie chaufferie…
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p22/p22Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> POLE ENFANCE – 61400 MORTAGNE AU PERCHE</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
 			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Coût global de l’opération : bâtiment 1 300 000 € HT
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +92,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +101,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +110,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +119,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +128,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p22/p22Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -154,8 +156,8 @@
   
 	  	
 	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
+	  	    <a   href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  href="pProjet22.html" class="list_two"> <span class="actived">• Pôle enfance à Mortagne-au-Perche (61)</span></a><br>
 		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
 		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
 		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
