--- a/pArEtablissement.html
+++ b/pArEtablissement.html
@@ -33,7 +33,7 @@
 	<!-- links top-left -->
 			  
 			<div id="btcontact" class="linky" > 
-			  <a class="diags str" href="pContact.html"> 
+			  <a class="diags" href="pContact.html"> 
 				  <span class="font-weight-bold"> Contact </span> 
 			  </a>
 			</div>
@@ -108,22 +108,22 @@
 	  <div class="listeDroite_etabl">
 	  	     
 
-	  	  <a  class="list_two" href="../etablissement/pProjet21.html"> •Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet22.html"> •Pôle enfance à Mortagne-au-Perche (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet23.html"> •Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet24.html"> •Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet25.html"> •Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet26.html"> •Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet27.html"> •Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet28.html"> •Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet29.html"> •Crêche à Ecouché (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet210.html"> •CAS Mortagne-au-Perche (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet211.html"> •SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet212.html"> •Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet213.html"> •Construction d'un restaurant scolaire - La Ferté Fresnel (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet214.html"> •Restructuration de la MFR - Mortagne-au-Perche (61)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet215.html"> •Restructuration et rénovation de la salle des anciens - St Cosmes en Vairais (72)</a><br>
-		  <a  class="list_two" href="../etablissement/pProjet216.html"> •Etablissement de formation IRFA - Hérouville St Clair (14)</a><br>
+	  	  <a  class="list_two" href="etablissement/pProjet21.html"> •Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet22.html"> •Pôle enfance à Mortagne-au-Perche (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet23.html"> •Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet24.html"> •Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet25.html"> •Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet26.html"> •Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet27.html"> •Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet28.html"> •Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet29.html"> •Crêche à Ecouché (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet210.html"> •CAS Mortagne-au-Perche (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet211.html"> •SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
+		  <a  class="list_two" href="etablissement/pProjet212.html"> •Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet213.html"> •Construction d'un restaurant scolaire - La Ferté Fresnel (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet214.html"> •Restructuration de la MFR - Mortagne-au-Perche (61)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet215.html"> •Restructuration et rénovation de la salle des anciens - St Cosmes en Vairais (72)</a><br>
+		  <a  class="list_two" href="etablissement/pProjet216.html"> •Etablissement de formation IRFA - Hérouville St Clair (14)</a><br>
       </div>
 	
 		<div id="btArchitecture">
