--- a/etablissement/pProjet23.html
+++ b/etablissement/pProjet23.html
@@ -59,29 +59,30 @@
 	<div class="right">
 	  </div>
 	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+		Un groupe scolaire de 6 classes avec locaux communs, restauration scolaire et cuisine, pôle BCD informatique…Une alliance de techniques et de matériaux maçonnerie enduite, ardoise et zinc, brique, bois. Economie passive, inertie, isolation, vitrage à faible émissivité, apports gratuits et protections solaires…, (masques et brises soleil). La volumétrie générale a été choisie pour accompagner l’entrée dans le bourg. La pente du terrain a été exploitée pour séparer les espaces bruyants (la cour) des espaces calmes (les classes) et, à l’intérieur, les différentes zones (primaires, maternelle).
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p23/p23Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> ECOLE – 61560 BAZOCHES SUR HOENE</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
 			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Coût global de l’opération : bâtiment 1 600 000 € HT
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +91,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +100,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +109,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +118,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +127,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p23/p23Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -154,9 +155,9 @@
   
 	  	
 	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
+	  	    <a   href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  href="pProjet22.html" class="list_two"> • Pôle enfance à Mortagne-au-Perche (61)</a><br>
+		  <a href="pProjet23.html" class="list_two">•<span class="actived"> Ecole primaire à Bazoches-sur-Hoêne (61) </span></a><br>
 		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
 		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
 		  <a href="pProjet26.html" class="list_two">• Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
