--- a/etablissement/pProjet28.html
+++ b/etablissement/pProjet28.html
@@ -58,30 +58,32 @@
 	<div id="zLeftTexteProject">
 	<div class="right">
 	  </div>
-	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+	<div id="TexteProject_test">
+La médiathèque de Mortagne au Perche est implantée au cœur de la ville, dans l’ancienne Halle au Blé sur 800 m² dans la Hall historique contenant déjà le cinéma (salle de 150 places et 30 000 entrées/an) permettant un investissement commun pour la mise en accessibilité du site, l’ensemble forme alors un complexe culturel « inévitable ». L’aménagement intérieur, avec la création d’un niveau intermédiaire et les difficultés liées aux faibles hauteurs et aux structures existantes a obligé une approche fine et une technicité qui a permis de donner à cet espace : confort, transparence pour une fréquentation redynamisée.
+
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p28/p28Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> MEDIATHEQUE – 61400 MORTAGNE AU PERCHE</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
-			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Année : 2013<br>
+			Coût global de l’opération: bâtiment 1 500 000€ HT + 170 000 € HT mobilier
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +92,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +101,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +110,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +119,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +128,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p28/p28Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -154,14 +156,14 @@
   
 	  	
 	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
+	  	    <a   href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  href="pProjet22.html" class="list_two"> • Pôle enfance à Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
 		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
 		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
 		  <a href="pProjet26.html" class="list_two">• Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
 		  <a href="pProjet27.html" class="list_two">• Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet28.html" class="list_two">• Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
+		  <a href="pProjet28.html" class="list_two"><span class="actived">• Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</span></a><br>
 		  <a href="pProjet29.html" class="list_two">• Crêche à Ecouché (61)</a><br>
 		  <a href="pProjet210.html" class="list_two">• CAS Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet211.html" class="list_two">• SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
