--- a/etablissement/pProjet29.html
+++ b/etablissement/pProjet29.html
@@ -58,30 +58,31 @@
 	<div id="zLeftTexteProject">
 	<div class="right">
 	  </div>
-	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+	<div id="TexteProject_test">
+Cette structure, alliance de béton et de bois est érigée dans un quartier très disparate d’un point de vue architectural. Un élément relie toutefois les différentes constructions entre elles et apporte une certaine harmonie. En effet, les bâtiments en pierre qui s’articulent autour de la place de la Mairie sont prolongés d’un mur de pierre qui se dresse (à des hauteurs variées) le long de la voie desservant la crèche. L’exploitation de ce masque particulièrement identifiable dans le quartier a conduit à la création d’une enveloppe protectrice autour de ce bâtiment accueillant de jeunes enfants. Afin de marquer une forte opposition avec la sobriété des façades sur rue, les façades internes au terrain sont plus « légères »
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p29/p29Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> POLE ENFANCE ET HALTE GARDERIE – 61150 ECOUCHE-LES-VALLEES</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
 			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Coût global de l’opération: 450 000€ HT 
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +91,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +100,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +109,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +118,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +127,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p29/p29Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -154,15 +155,15 @@
   
 	  	
 	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
+	  	    <a   href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
+		  <a  href="pProjet22.html" class="list_two"> • Pôle enfance à Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
 		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
 		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
 		  <a href="pProjet26.html" class="list_two">• Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
 		  <a href="pProjet27.html" class="list_two">• Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet28.html" class="list_two">• Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
-		  <a href="pProjet29.html" class="list_two">• Crêche à Ecouché (61)</a><br>
+		  <a href="pProjet29.html" class="list_two"><span class="actived">• Crêche à Ecouché (61)</span></a><br>
 		  <a href="pProjet210.html" class="list_two">• CAS Mortagne-au-Perche (61)</a><br>
 		  <a href="pProjet211.html" class="list_two">• SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
 		  <a href="pProjet212.html" class="list_two">• Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
