--- a/industrie/pProjet37.html
+++ b/industrie/pProjet37.html
@@ -58,30 +58,32 @@
 	<div id="zLeftTexteProject">
 	<div class="right">
 	  </div>
-	<div id="TexteProject">
-		Réhabilitation d’un bâtiment majeur de la commune pour y accueillir la mairie, un parc et des espaces d’expositions. L’ancien presbytère, a été réinvestie pour l’installation des locaux administratifs de la mairie comprenant un espace accueil, un bureau secrétariat, une salle d’honneur pour les réunions de conseil, les mariages, expositions… Un bureau polyvalent permettant au maire ou aux adjoints et conseillers de recevoir du public. Un sanitaire à la fois pour le personnel et répondant à l’exigence d’accessibilité PMR. Et à l’étage, des bureaux et salles de rangements (archives…) divers non accessibles au public réservés au fonctionnement interne des <br>services.</div>
+	<div id="TexteProject_test">
+		38 logements individuels + 10 studios gendarmes adjoints + 7 logements individuels de réserve et 800 m² de locaux de service Performance énergétique : RT 2005
+L’implantation même des locaux de service à l’angle nord ouest du terrain, sur la zone la plus plane, en permet une perception forte depuis le rond point urbain du bas de la rue des Déportés. Bâtiment charnière, bâtiment structurant pour le quartier et pour la ville, il impose une architecture de qualité, en transition entre la ville et la nature et apporter une image contemporaine et respectueuse
+	</div>
    
 
     </div>
 	 
 	<div id="cadreImageBis">
-	   <img id="imageProject" src="../images/p1/p21/p21Im1.gif" width="525" height="390" alt=""/> </div>   
+	   <img id="imageProject" src="../images/p1/p37/p37Im1.gif" width="525" height="390" alt=""/> </div>   
 </div>
 
 
 	<div id="zCenter">
 	<div id="titreProjet"><br>
-	  <span class="title_orange">MAIRIE – 61560 BAZOCHES SUR HOENE</span><br>
+	  <span class="title_orange"> Gendarmerie – 61400 MORTAGNE AU PERCHE</span><br>
 		<span class="sousTitle" >
 			Maître d’ouvrage : Public<br>
 			Année : 2011<br>
-			Coût global de l’opération : bâtiment 300 000 € HT
+			Coût global de l’opération: bâtiment 520 000€ HT
 		</span>
 	  </div>
 
 
  <div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -90,7 +92,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -99,7 +101,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
@@ -108,7 +110,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -117,7 +119,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -126,7 +128,7 @@
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
 	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','../images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p37/p37Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -138,9 +140,9 @@
 	<div id="texteBasProjet">
 			<a href="../pArHabitation.html" class="list_two"><span>HABITATION</span></a>&nbsp;
 			<span >///</span>&nbsp;
-			<a href="../pArEtablissement.html" class="list_two"> <span class="actived"> ETABLISSEMENTS CULTURELS, SOCIAUX ET SCOLAIRES</span></a>&nbsp;
-			<span >///</span>&nbsp;
-			<a href="../pArIndustrie.html" class="list_two">INDUSTRIES, BUREAUX ET COMMERCES</a>&nbsp;
+			<a href="../pArEtablissement.html" class="list_two">  ETABLISSEMENTS CULTURELS, SOCIAUX ET SCOLAIRES</span></a>&nbsp;
+			///</span>&nbsp;
+			<a href="../pArIndustrie.html" class="list_two"><span class="actived">INDUSTRIES, BUREAUX ET COMMERCES<span ></a>&nbsp;
 			<span >///</span>&nbsp;
 			<a href="../pArPatrimoine.html" class="list_two">PATRIMOINE</a>&nbsp;
 			<span >///</span>&nbsp;
@@ -153,23 +155,19 @@
   <div id="zRight">
   
 	  	
-	  <div class="listeDroite_etabl">
-	  	    <a  class="actived" href="pProjet21.html" class=" list_two ">• Mairie de Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet22.html" class="list_two">• Pôle enfance à Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet23.html" class="list_two">• Ecole primaire à Bazoches-sur-Hoêne (61)</a><br>
-		  <a href="pProjet24.html" class="list_two">• Siège de l'Association des Chasseurs de l'Orne à Silly-en-Gouffern (61)</a><br>
-		  <a href="pProjet25.html" class="list_two">• Construction d'un restaurant scolaire pour l'école Pierre Rasse Mathieu (14)</a><br>
-		  <a href="pProjet26.html" class="list_two">• Aménagement et extension de la salle de la jeunesse de Montabard en centre culturel rural (61)</a><br>
-		  <a href="pProjet27.html" class="list_two">• Pole Santé pluridisciplinaire Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet28.html" class="list_two">• Aménagement de la médiathèque dans la halle aux grains ville de Mortagne au Perche (61)</a><br>
-		  <a href="pProjet29.html" class="list_two">• Crêche à Ecouché (61)</a><br>
-		  <a href="pProjet210.html" class="list_two">• CAS Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet211.html" class="list_two">• SAINT PIERRE SUR DIVES - Reconstruction de l'école primaire BBC</a><br>
-		  <a href="pProjet212.html" class="list_two">• Aménagement des halles de Bonnetable en école de danse et de musique (72)</a><br>
-		  <a href="pProjet213.html" class="list_two">• Construction d'un restaurant scolaire - La Ferté Fresnel (61)</a><br>
-		  <a href="pProjet214.html" class="list_two">• Restructuration de la MFR - Mortagne-au-Perche (61)</a><br>
-		  <a href="pProjet215.html" class="list_two">• Restructuration et rénovation de la salle des anciens - St Cosmes en Vairais (72)</a><br>
-		  <a href="pProjet216.html" class="list_two">- Etablissement de formation IRFA - Hérouville St Clair (14)</a><br>
+	   <div class="listeDroite_indus">
+	  	     
+		  <a class="list_two" href="pProjet31.html">• Construction d'un bâtiment logistique - Longny-au-Perche (61)</a><br>
+		  <a class="list_two" href="pProjet32.html">• Ateliers Communautaires de la CDC à Sablé-sur-Sarthe (61)</a><br>
+		  <a class="list_two" href="pProjet33.html">• CAS Mortagne au Perche (61)</a><br>
+		  <a class="list_two" href="pProjet34.html">• Construction d'un Intermarché - St Julien sur Sarthe (61)</a><br>
+		  <a class="list_two" href="pProjet35.html">• Construction d'un atelier cidricole - St Pierre sur Dives (14)</a><br>
+		  <a class="list_two" href="pProjet36.html">• Maison des services - Mortagne-au-Perche (61)</a><br>
+		  <a class="list_two" href="pProjet37.html"><span class="actived">• Construction d'une gendarmerie avec logements - Mortagne-au-Perche (61)</span></a><br>
+		  <a class="list_two" href="pProjet38.html">• Construction d'un bâtiment  industriel BOHIN INDUSTRIE - L'Aigle(61)</a><br>
+		  <a class="list_two" href="pProjet39.html">• Bâtiment industriel CRIMO France - Alençon (61)</a>
+
+
       </div>
 	
 	<div id="btArchitecture">
