--- a/olds/pProjet21.html
+++ b/olds/pProjet21.html
@@ -97,52 +97,52 @@ function MM_goToURL() { //v3.0
 		</span>
 		</div>
 	<div id=cercleIm1 
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im1.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im1.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-		</div>
+	  </div>
 	<div id=cercleIm2
-	 onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im2.gif',1);
+	 onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im2.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-		</div>
+	  </div>
 	<div id=cercleIm3
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im3.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im3.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-		</div>
+	  </div>
 	<div id=cercleIm4
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im4.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im4.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-		</div>
+	  </div>
 	<div id=cercleIm5
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im5.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im5.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm4','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm5','','backgroundColor','#e05015','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#adbcc4','DIV')">
-		</div>
+	  </div>
 	<div id=cercleIm6
-	onMouseOver="MM_swapImage('imageProject','','images/p1/p21/p21Im6.gif',1);
+	onMouseOver="MM_swapImage('imageProject','','../images/p1/p112/p112Im6.gif',1);
 	 MM_changeProp('cercleIm1','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm2','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm3','','backgroundColor','#adbcc4','DIV');
@@ -150,6 +150,7 @@ function MM_goToURL() { //v3.0
 	 MM_changeProp('cercleIm5','','backgroundColor','#adbcc4','DIV');
 	 MM_changeProp('cercleIm6','','backgroundColor','#e05015','DIV')">
 		</div>
+		
 	<div id="texteBasProjet">
 			<a href="pArHabitation.html">HABITATION</a>&nbsp;
 			<span style="color:#e05015">///</span>&nbsp;
