--- a/pContact.html
+++ b/pContact.html
@@ -38,10 +38,10 @@
 	  
 	  	<!--<div id="btAgenceMortagne" onClick="MM_goToURL('parent','pAgenceMortagne.html');return document.MM_returnValue"-->
 		<div id="btAgenceMortagne" >
-		 <a class="linky"  href="../pAgenceMortagne.html"> Agence&nbsp;Mortagne</a>
+		 <a class="linky"  href="#pAgenceMortagne.html"> Agence&nbsp;Mortagne</a>
 	</div>
 		<div id="btAgenceArgentan">
-				 <a class="linky"  href="../pAgenceArgentan.html"> Agence&nbsp;Argentan</a>
+				 <a class="linky"  href="#pAgenceArgentan.html"> Agence&nbsp;Argentan</a>
     </div>
 
 
