--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>ArchiTriad</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <link rel="shortcut icon" href="images/at.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script type="text/javascript" src="script.js"></script>
 
 </head>
@@ -28,10 +27,10 @@
                 <div id="btcontact" onClick="MM_goToURL('parent','pContact.html');return document.MM_returnValue" onMouseOver="MM_changeProp('btcontact','','color','#adbcc4','DIV')" onMouseOut="MM_changeProp('btcontact','','color','#FFFFFF','DIV')">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact
                 </div>
-                <div id="btAgenceMortagne" onClick="MM_goToURL('parent','pAgenceMortagne.html');return document.MM_returnValue" onMouseOver="MM_changeProp('btAgenceMortagne','','color','#adbcc4','DIV')" onMouseOut="MM_changeProp('btAgenceMortagne','','color','#FFFFFF','DIV')">
+                <div id="btAgenceMortagne" onClick="MM_goToURL('parent','#pAgenceMortagne.html');return document.MM_returnValue" onMouseOver="MM_changeProp('btAgenceMortagne','','color','#adbcc4','DIV')" onMouseOut="MM_changeProp('btAgenceMortagne','','color','#FFFFFF','DIV')">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Agence&nbsp;Mortagne
                 </div>
-                <div id="btAgenceArgentan" onClick="MM_goToURL('parent','pAgenceArgentan.html');return document.MM_returnValue" onMouseOver="MM_changeProp('btAgenceArgentan','','color','#adbcc4','DIV')" onMouseOut="MM_changeProp('btAgenceArgentan','','color','#FFFFFF','DIV')">
+                <div id="btAgenceArgentan" onClick="MM_goToURL('parent','#pAgenceArgentan.html');return document.MM_returnValue" onMouseOver="MM_changeProp('btAgenceArgentan','','color','#adbcc4','DIV')" onMouseOut="MM_changeProp('btAgenceArgentan','','color','#FFFFFF','DIV')">
                     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Agence&nbsp;Argentan
                 </div>
             </div>
