--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
 
 
         <ul class=" flex-circles ">
-            <a href="www.facebook.com ">
-                <li class="flex-text top rady"><a class="link_circles" href="pArchitecture.html">ARCHITECTURE</a></li>
-            </a>
+        
+                <li class="flex-text top rady"><a class="link_circles" href="Habitation.html">ARCHITECTURE</a></li>
+          
             <li class="flex-text mid rady"><a class="link_circles" href="#index.html ">AMENAGEMENT</a></li>
-            <li class="flex-text bott rady"><a class="link_circles" href="new.html">ARCHI-Triad</a></li>
+            <li class="flex-text bott rady"><a class="link_circles" href="index.html">ARCHI-Triad</a></li>
 
         </ul>
         <!-- 
