--- a/divers.html
+++ b/divers.html
@@ -51,8 +51,7 @@
             <ul class="navbar-nav">
 
                 <li class="nav-item radius">
-                    <a class="nav-link" href="#">
-                        Architecture</a>
+                    <a class="nav-link" href="#"> Architecture</a>
                 </li>
 
                 <li class="nav-item">
