--- a/Habitation.html
+++ b/Habitation.html
@@ -77,7 +77,7 @@
     </nav>
 
 
-    <div class="container-fluid" style="background-image: url('img/bg/at_1.jpg'); -webkit-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
+    <div class="container-fluid" style="background-image: url('/img/bg/at_1.jpg'); -webkit-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
 box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);" 
 >
