--- a/Habitation.html
+++ b/Habitation.html
@@ -135,10 +135,10 @@ box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);"
 <div class="d-flex flex-column">
 
 <a href="Habitation.html" class="butts aktive">Habitation</a>
-<a href="etablissements.html" class="butts">Etablissements culturels, sociaux et scolaires</a>
-<a href="industries.html" class="butts">Industries, Bureaux et commerces</a>
-<a href="patrimoine.html" class="butts">Patrimoine</a>
-<a href="divers.html" class="butts">Divers</a>
+<a href="Etablissements.html" class="butts">Etablissements culturels, sociaux et scolaires</a>
+<a href="Industries.html" class="butts">Industries, Bureaux et commerces</a>
+<a href="Patrimoine.html" class="butts">Patrimoine</a>
+<a href="Divers.html" class="butts">Divers</a>
 
 
 
