--- a/divers.html
+++ b/divers.html
@@ -136,9 +136,9 @@ box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);"
 
 <a href="Habitation.html" class="butts ">Habitation</a>
 <a href="Etablissements.html" class="butts ">Etablissements culturels, sociaux et scolaires</a>
-<a href="industries.html" class="butts">Industries, Bureaux et commerces</a>
-<a href="patrimoine.html" class="butts">Patrimoine</a>
-<a href="divers.html aktive" class="butts aktive">Divers</a>
+<a href="Industries.html" class="butts">Industries, Bureaux et commerces</a>
+<a href="Patrimoine.html" class="butts">Patrimoine</a>
+<a href="Divers.html aktive" class="butts aktive">Divers</a>
 
 
 
