--- a/Habitation.html
+++ b/Habitation.html
@@ -79,8 +79,7 @@
 
     <div class="container-fluid" style="background-image: url(img/bg/at_1.JPG); -webkit-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);
-box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);" 
->
+box-shadow: 12px 29px 81px 0px rgba(0,0,0,0.75);" >
         <div class="menuleft">
             <div class="linkContact  ">
                 <i class="fas fa-circle"></i>
